--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "mongoose": "^6.0.9",
     "nodemon": "^2.0.13",
     "path": "^0.12.7"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
